force-app/main/default/objects/Product_Parent_Child_Link__c/Product_Parent_Child_Link__c.object-meta.xml
<CustomObject>
    <description>An junction object to link two products together.</description>
    <label>Product Parent-Child Link</label>
    <nameField>
        <displayFormat>Link-{000000}</displayFormat>
        <label>Link Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Parent-Child Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>