force-app/main/default/objects/Product_Parent_Child_Link__c/fields/Child_Product__c.field-meta.xml
<CustomField>
    <fullName>Child_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the Child product</description>
    <inlineHelpText>The lookup to the Child product</inlineHelpText>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Product Links</relationshipLabel>
    <relationshipName>Child_Product_Links</relationshipName>
    <type>Lookup</type>
</CustomField>