force-app/main/default/objects/Product_Parent_Child_Link__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the Parent product</description>
    <inlineHelpText>The lookup to the Parent product</inlineHelpText>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Product Links</relationshipLabel>
    <relationshipName>Parent_Product_Links</relationshipName>
    <type>Lookup</type>
</CustomField>