force-app/main/default/objects/Product_Parent_Child_Link__c/fields/Parent_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Code__c</fullName>
    <description>The Product Code of the Parent Product.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Product Code of the Parent Product.</inlineHelpText>
    <label>Parent Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>