force-app/main/default/objects/Product_Parent_Child_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>Child_Product__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Included_in_Parent_Price__c</columns>
    <columns>Remove_Price__c</columns>
    <columns>Add_Price__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>