force-app/main/default/objects/Product_Parent_Child_Link__c/listViews/Core.listView-meta.xml
<ListView>
    <fullName>Core</fullName>
    <columns>NAME</columns>
    <columns>Product_Group_Product_Code__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Parent_Product__c</columns>
    <columns>Child_Product__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Included_in_Parent_Price__c</columns>
    <columns>Remove_Price__c</columns>
    <columns>Add_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>contains</operation>
        <value>PAY</value>
    </filters>
    <label>Core</label>
</ListView>