force-app/main/default/objects/Product_Parent_Child_Link__c/listViews/MMS_Links.listView-meta.xml
<ListView>
    <fullName>MMS_Links</fullName>
    <columns>NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Child_Product__c</columns>
    <columns>Price_Schedule_Product_Code__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Included_in_Parent_Price__c</columns>
    <columns>Remove_Price__c</columns>
    <columns>Add_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>MMS</value>
    </filters>
    <label>MMS Links</label>
</ListView>